# human3090

./: .gitignore  CLAUDE.md  README.md  TASK.md  bench_runner.py  benchmark_results.json  evaluate_lcb.py  inspect_result.py  parse_results.py  plot_human_eval.py  preferred_params.md  pyproject.toml  run_eval.py  run_lcb.py  score.sh  show_human.py  test_single_problem.py
human3090/: analyze.py  bench_constants.py  bench_runner.py  count_tokens.py  daemon.py  evaluate_lcb.py  inspect_all_results.py  inspect_result.py  job.py  plot_human_eval.py  plot_lcb.py  run_eval.py  run_eval_manual.py  run_lcb.py  serve_hf.py  server.py  show_human.py  test_single_problem.py
human3090/human_eval/: data.py  evaluation.py  execution.py
jobs/done/: deepcoder-14b-lcbv5.yaml  deepcoder-14b-lcbv6.yaml  deepseek-r1-14b-lcbv5.yaml  iquest-coder-14b-lcbv5.yaml  nemotron-14b-lcbv5.yaml  nemotron-14b-lcbv6.yaml  nemotron-7b-lcbv5.yaml  nemotron-7b-lcbv6.yaml  qwen2.5-coder-32b-lcbv5.yaml  qwen2.5-coder-32b-lcbv6.yaml  qwen3.5-35b-xl-humaneval.yaml  qwen3.5-35b-xl-lcbv5.yaml  qwen3.5-35b-xl-lcbv6.yaml
jobs/examples/: README.md  mistral-small.yaml  qwen3.5-27b.yaml  qwen3.5-35b-moe-v6.yaml  qwen3.5-35b-moe.yaml
jobs/failed/: deepseek-r1-14b-lcbv6.yaml  deepseek-r1-32b-lcbv5.yaml  deepseek-r1-32b-lcbv6.yaml  exaone-deep-32b-lcbv5.yaml  exaone-deep-32b-lcbv6.yaml  iquest-coder-14b-humaneval.yaml  iquest-coder-14b-lcbv5.yaml  mistral-small-lcbv5.yaml  mistral-small-lcbv6.yaml  nemotron-14b-lcbv5.yaml  nemotron-14b-lcbv6-32k.yaml  nemotron-32b-lcbv5.yaml  nemotron-32b-lcbv6.yaml  nemotron-7b-lcbv5-32k.yaml  nemotron-7b-lcbv5.yaml  nemotron-7b-lcbv6-32k.yaml  qwen3.5-27b-lcbv6.yaml  qwen3.5-35b-lcbv5.yaml  qwen3.5-35b-lcbv6.yaml  qwen3.5-35b-xl-humaneval-32k.yaml  qwen3.5-9b-humaneval.yaml  qwen3.5-9b-lcbv5.yaml  qwen3.5-9b-lcbv6.yaml
jobs/queued/: deepcoder-14b-lcbv5-32k.yaml  deepcoder-14b-lcbv6-32k.yaml  deepseek-r1-14b-lcbv5-32k.yaml  iquest-coder-14b-humaneval.yaml  iquest-coder-14b-lcbv6.yaml  jan-code-4b-lcbv6.yaml  jan-code-4b-q8-lcbv6.yaml  nemotron-14b-lcbv5-32k.yaml  nemotron-14b-lcbv6.yaml  nemotron-7b-lcbv6.yaml  qwen2.5-coder-32b-lcbv5.yaml  qwen2.5-coder-32b-lcbv6.yaml  qwen3.5-27b-lcbv5-32k.yaml  qwen3.5-27b-lcbv5.yaml  qwen3.5-27b-lcbv6.yaml  qwen3.5-35b-lcbv5.yaml  qwen3.5-35b-lcbv6.yaml  qwen3.5-35b-xl-lcbv5-32k.yaml  qwen3.5-35b-xl-lcbv5.yaml  qwen3.5-35b-xl-lcbv6-32k.yaml  qwen3.5-35b-xl-lcbv6.yaml  qwen3.5-9b-humaneval.yaml  qwen3.5-9b-lcbv5.yaml  qwen3.5-9b-lcbv6.yaml  qwq-32b-lcbv5.yaml  qwq-32b-lcbv6.yaml
parsers/: __init__.py  base.py  human_eval.py
